  as path relative the to project directory.
* Internal changes in classpath handling. The various classpathes SBuild needs
  when reading, compiling and executing projects are now read from a properties
  file in the installation directory, which decouples embedded solutions like
  the Eclipse Plugin and allows them to load different SBuild versions.

SBuild 0.1.3 - 2012-10-18

* Improved classloading for ScalaTest and JUnit addons.
* Incompatible API change: SchemeHandler can now have dependencies, when 
  implementing the trait SchemeHandlerWithDependencies and have access to them
  through the TargetContext, which will be given as parameter into resolve
  method.
* Added new ZipSchemeHandler to reference zipped resources, a typical use case
  for original online dependencies like TestNG, JUnit or SWT.
* Fixed a bug, where the self-evaluated up-to-date state of phony targets was
  lost causing some unnecessary executions.

SBuild 0.1.2 - 2012-10-04

* Fixed cross-project dependency resolution problem for file targets.

SBuild 0.1.1 - 2012-09-26

* SBuild now builds itself. SBuild-0.1.0 is required. :-)
* SchemeHandler API changed: Return value of resolve-method changed to
  ResolveResult.
* Added new parameter forceDownload to HttpSchemeHandler.
* Improved/fixed up-to-date detection for prerequisites/dependencies from
  different projects.
* Only targets defined in buildfiles will be shown with --list and
  --list-recursive, implicitly create targets will be not.
* Improved error messages.
* Improved logging.
* Added new commandline option --dependency-tree to show the dependency tree
  for the requested targets.
* Better cycle-detecting in target dependencies.
* Better detection, if the buildfile needs recompilation in case that different
  versions of SBuild are used.
* Run SBuild JVM with more PermGemSpace to avoid OutOfMemoryErrors.
* New Eclipse Plugin that is able the provide a classpath container based on