@@ -18,6 +18,9 @@ SBuild SVN/trunk
   when reading, compiling and executing projects are now read from a properties
   file in the installation directory, which decouples embedded solutions like
   the Eclipse Plugin and allows them to load different SBuild versions.
+* Added get method to Prop object, to easily test, if an property is set.
+* Experimentally extended API of Target with an apply method as alternative to
+  exec method.
 
 SBuild 0.1.3 - 2012-10-18
 
